Fix z-index for empty list message in ListWithPreviewTab

--- a/src/components/ListWithPreviewTab.scss
+++ b/src/components/ListWithPreviewTab.scss
@@ -55,6 +55,7 @@
             display: flex;
             font-size: 300%;
             color: var(--menuSelectedColor);
+            z-index: -9999;
         }
 
         button {
